manifests/base/resources/sense-client/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/port: "9180"
    prometheus.io/scrape: "true"
  labels:
    app: sense-client
    chart: sense-client-1.7.84
    heritage: Helm
    release: sense-client
  name: sense-client
spec:
  ports:
  - name: http
    port: 9050
    protocol: TCP
    targetPort: http
  selector:
    app: sense-client
    release: sense-client
  type: ClusterIP
---
